--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "deploy": "prisma deploy"
   },
   "dependencies": {
+    "apollo-server-express": "^2.6.2",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "6.0.0",
     "graphql": "^0.13.2",
     "graphql-cli": "^2.16.7",
-    "graphql-yoga": "1.16.2",
+    "graphql-import": "^0.7.1",
     "jsonwebtoken": "8.3.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.7",
