--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Entra-backend",
   "version": "1.0.0",
   "description": "the backend of Entra",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
@@ -33,5 +36,9 @@
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-node": "^9.1.0"
   }
 }
