--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-cli": "^2.16.7",
     "graphql-import": "^0.7.1",
     "jsonwebtoken": "8.3.0",
+    "morgan": "^1.9.1",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
