--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy": "prisma deploy"
   },
   "dependencies": {
-    "apollo-server-express": "^2.7.0",
+    "apollo-server-express": "^2.8.1",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
@@ -26,6 +26,7 @@
     "nodemailer": "^4.6.8",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
+    "postmark": "^2.2.9",
     "prisma": "1.34.0",
     "prisma-binding": "2.3.12",
     "stripe": "^6.36.0"
