--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "graphql-import": "^0.7.1",
     "jsonwebtoken": "8.3.0",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "postmark": "^2.2.9",
     "prisma": "1.34.0",
     "prisma-binding": "2.3.12",
+    "qs": "^6.8.0",
     "stripe": "^6.36.0"
   },
   "license": "MIT",
