--- a/package.json
+++ b/package.json
@@ -44,6 +44,14 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-plugin-node": "^9.1.0"
+    "eslint-plugin-node": "^9.1.0",
+    "husky": "3.0.4",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
