--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-cli": "^2.16.7",
     "graphql-import": "^0.7.1",
     "jsonwebtoken": "8.3.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "nodemailer": "^4.6.8",
