--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "prisma": "1.34.0",
     "prisma-binding": "2.3.12",
     "qs": "^6.8.0",
+    "react-cookie": "^4.0.3",
+    "react-cookie-banner": "^4.1.0",
     "stripe": "^6.36.0"
   },
   "license": "MIT",
