--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "date-fns": "^1.30.1",
     "dotenv": "6.0.0",
+    "draftail": "^1.3.0",
     "graphql": "^14.5.8",
     "graphql-cli": "^2.16.7",
     "graphql-import": "^0.7.1",
